--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -146,7 +146,7 @@
             <objects>
                 <navigationController id="8Hx-7m-Pkt" userLabel="Map Tab" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Map" image="map" id="JjB-CW-M3a" userLabel="Map"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="p5m-hN-gsz">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="p5m-hN-gsz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -186,16 +186,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="4pr-v8-jg2" secondAttribute="trailing" constant="-16" id="Hcs-Vw-7jE"/>
-                            <constraint firstAttribute="centerY" secondItem="E8z-YA-tVn" secondAttribute="centerY" id="Jtf-Bk-WBM"/>
-                            <constraint firstItem="9AK-3M-sAb" firstAttribute="top" secondItem="mYh-vJ-RVt" secondAttribute="bottom" constant="-49" id="Mcn-43-vaz"/>
-                            <constraint firstItem="mYh-vJ-RVt" firstAttribute="top" secondItem="fnl-DY-paD" secondAttribute="bottom" constant="-64" id="PFI-3T-8fT"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="mYh-vJ-RVt" secondAttribute="trailing" constant="-16" id="Smi-Vk-fvs"/>
-                            <constraint firstItem="9AK-3M-sAb" firstAttribute="top" secondItem="4pr-v8-jg2" secondAttribute="bottom" constant="-49" id="eZG-U8-P66"/>
-                            <constraint firstAttribute="centerX" secondItem="E8z-YA-tVn" secondAttribute="centerX" id="qnO-FW-YR7"/>
-                            <constraint firstItem="4pr-v8-jg2" firstAttribute="top" secondItem="fnl-DY-paD" secondAttribute="bottom" constant="-64" id="vzB-5j-bpb"/>
-                            <constraint firstItem="4pr-v8-jg2" firstAttribute="leading" secondItem="CG3-Vi-R8e" secondAttribute="leadingMargin" constant="-16" id="wlB-M5-pwI"/>
-                            <constraint firstItem="mYh-vJ-RVt" firstAttribute="leading" secondItem="CG3-Vi-R8e" secondAttribute="leadingMargin" constant="-16" id="y1j-tf-Ntg"/>
+                            <constraint firstItem="4pr-v8-jg2" firstAttribute="centerX" secondItem="E8z-YA-tVn" secondAttribute="centerX" id="8em-22-gzu"/>
+                            <constraint firstItem="4pr-v8-jg2" firstAttribute="trailing" secondItem="mYh-vJ-RVt" secondAttribute="trailing" id="C7o-G6-QX1"/>
+                            <constraint firstItem="4pr-v8-jg2" firstAttribute="top" secondItem="mYh-vJ-RVt" secondAttribute="top" id="KiZ-lF-eth"/>
+                            <constraint firstAttribute="trailing" secondItem="4pr-v8-jg2" secondAttribute="trailing" id="OWO-b7-0lY"/>
+                            <constraint firstItem="4pr-v8-jg2" firstAttribute="centerY" secondItem="E8z-YA-tVn" secondAttribute="centerY" id="Td3-7I-QBm"/>
+                            <constraint firstItem="4pr-v8-jg2" firstAttribute="top" secondItem="CG3-Vi-R8e" secondAttribute="top" id="W1D-v1-XBC"/>
+                            <constraint firstItem="mYh-vJ-RVt" firstAttribute="leading" secondItem="4pr-v8-jg2" secondAttribute="leading" id="XBS-At-8SC"/>
+                            <constraint firstItem="mYh-vJ-RVt" firstAttribute="leading" secondItem="CG3-Vi-R8e" secondAttribute="leading" id="eoY-V0-Xzf"/>
+                            <constraint firstItem="4pr-v8-jg2" firstAttribute="bottom" secondItem="mYh-vJ-RVt" secondAttribute="bottom" id="l4P-FL-Zvn"/>
+                            <constraint firstAttribute="bottom" secondItem="mYh-vJ-RVt" secondAttribute="bottom" id="uKE-cy-YFg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="On The Map" id="36f-7M-O5g">
@@ -231,19 +231,19 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where are you" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HW-g8-K2y">
-                                        <rect key="frame" x="101" y="75" width="174" height="33"/>
+                                        <rect key="frame" x="98" y="75" width="180.5" height="33"/>
                                         <fontDescription key="fontDescription" name="Roboto-Thin" family="Roboto" pointSize="28"/>
                                         <color key="textColor" red="0.069283351302146912" green="0.32415136694908142" blue="0.71316438913345337" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="studying" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ll8-zb-3C7">
-                                        <rect key="frame" x="136.5" y="106" width="101.5" height="30.5"/>
+                                        <rect key="frame" x="137.5" y="106" width="99.5" height="30.5"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="26"/>
                                         <color key="textColor" red="0.069283351302146912" green="0.32415136694908142" blue="0.71316438913345337" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="today?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mkw-yb-0vz">
-                                        <rect key="frame" x="150.5" y="139" width="74" height="30.5"/>
+                                        <rect key="frame" x="147.5" y="139" width="80" height="30.5"/>
                                         <fontDescription key="fontDescription" name="Roboto-Thin" family="Roboto" pointSize="26"/>
                                         <color key="textColor" red="0.069283351302146912" green="0.32415136694908142" blue="0.71316438913345337" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -276,7 +276,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ets-Wi-T8e">
-                                <rect key="frame" x="310" y="20" width="49" height="31"/>
+                                <rect key="frame" x="309" y="20" width="50" height="31"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" red="0.069283351302146912" green="0.32415136694908142" blue="0.71316438913345337" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -394,7 +394,7 @@
             <objects>
                 <navigationController id="d8N-49-p0d" userLabel="Table Tab" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="List" image="list" id="eU0-0d-i29" userLabel="List"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="aco-Rb-keV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aco-Rb-keV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -426,11 +426,11 @@
                                         <rect key="frame" x="0.0" y="22" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UvB-EL-PpI" id="Oom-cY-QTp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kqr-2f-DLl">
-                                                    <rect key="frame" x="62" y="11" width="35.5" height="21.5"/>
+                                                    <rect key="frame" x="62" y="10" width="36" height="22"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -441,7 +441,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </imageView>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="amQ-TB-feI">
-                                                    <rect key="frame" x="62" y="32.5" width="50" height="17"/>
+                                                    <rect key="frame" x="62" y="32" width="50" height="17"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
@@ -459,10 +459,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2he-VJ-OPp" firstAttribute="top" secondItem="RJe-UP-QxK" secondAttribute="bottom" constant="-49" id="1Ki-ui-efV"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="RJe-UP-QxK" secondAttribute="trailing" constant="-16" id="Isy-Ic-55R"/>
-                            <constraint firstItem="RJe-UP-QxK" firstAttribute="top" secondItem="jsf-xY-XoQ" secondAttribute="bottom" constant="-64" id="TNw-Ob-1vk"/>
-                            <constraint firstItem="RJe-UP-QxK" firstAttribute="leading" secondItem="uhJ-d0-u4a" secondAttribute="leadingMargin" constant="-16" id="vxc-bz-F12"/>
+                            <constraint firstAttribute="bottom" secondItem="RJe-UP-QxK" secondAttribute="bottom" id="NUM-Dq-bKZ"/>
+                            <constraint firstItem="RJe-UP-QxK" firstAttribute="leading" secondItem="uhJ-d0-u4a" secondAttribute="leading" id="Q67-Xs-83X"/>
+                            <constraint firstItem="RJe-UP-QxK" firstAttribute="top" secondItem="uhJ-d0-u4a" secondAttribute="top" id="kvX-vH-KhR"/>
+                            <constraint firstAttribute="trailing" secondItem="RJe-UP-QxK" secondAttribute="trailing" id="mWP-3h-aD4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="On The Map" id="tF8-te-bzI">
@@ -485,7 +485,7 @@
             <objects>
                 <navigationController id="hbg-Kf-T2i" userLabel="Collection Tab" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Collection" image="collection" id="dj2-hJ-s25" userLabel="Collection"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="3Em-g4-ATx">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3Em-g4-ATx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
